--- a/src/components/contenido/terminados.module.css
+++ b/src/components/contenido/terminados.module.css
@@ -1,4 +1,4 @@
-.contentEnd{
+.contentEnd {
     width: 100%;
     height: 100%;
     color: #bdc1c6;
@@ -9,11 +9,11 @@
     margin: 1rem 0;
 }
 
-p{
+p {
     font-size: 1.3rem;
 }
 
-.cardEnd{
+.cardEnd {
     min-width: 610px;
     min-height: 173px;
     background-color: #202124;
@@ -21,24 +21,24 @@ p{
     border-radius: 8px;
 }
 
-.cardEnd .titleEnd{
+.cardEnd .titleEnd {
     font-size: 1.7rem;
     margin-bottom: 16px;
     color: #ffffff;
 }
 
-.cardEnd .endEquipos{
+.cardEnd .endEquipos {
     display: flex;
     padding: 1.5rem 2rem;
     justify-content: center;
     align-items: center;
 }
 
-.cardEnd .endEquipos .resultados{
+.cardEnd .endEquipos .resultados {
     font-size: 36px;
 }
 
-.cardEnd .endEquipos .home{
+.cardEnd .endEquipos .home {
     width: 220px;
     height: 130px;
     display: flex;
@@ -47,14 +47,42 @@ p{
     align-items: center;
 }
 
-.cardEnd .endEquipos .home .img{
+.cardEnd .endEquipos .home .img {
     width: 96px;
     height: 96px;
 }
 
-.cardEnd .endEquipos .home .img img{
+.cardEnd .endEquipos .home .img img {
     width: 100%;
     height: 100%;
     object-fit: contain;
 }
 
+@media (max-width: 768px) {
+    .cardEnd {
+        min-width: 0;
+        width: 360px;
+    }
+
+    .cardEnd .titleEnd {
+        font-size: 1.1rem;
+    }
+
+    .cardEnd .endEquipos .home {
+        width: 100px;
+        height: 110px;
+    }
+
+    .cardEnd .endEquipos .home .img {
+        width: 76px;
+        height: 76px;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+
+    .cardEnd .endEquipos .resultados {
+        font-size: 26px;
+    }
+}
