--- a/src/components/layout/navbar.module.css
+++ b/src/components/layout/navbar.module.css
@@ -1,73 +1,66 @@
-.navbar {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #2b2b2b;
-    padding: 15px;
-    /* position: fixed; */
-    width: 100%;
-    /* z-index: 1; */
+.main_nav {
+    background-color: #202124;
+    height: 70px;
 }
 
-.navbar a {
-    text-decoration: none;
-    color: #ffffff;
-    transition: .3s;
-}
-
-.navbar a:hover {
-    color: red;
-}
-
-.navbar .logo {
-    margin-right: 50px;
-    margin-left: 5%;
-    color: #ffffff;
-}
-
-.navbar .menu {
-    margin-right: 5%;
-}
-
-.navbar .menu .list {
+.main_menu {
     list-style: none;
     display: flex;
-    gap: 25px;
+    flex-direction: column;
+    align-items: center;
+    background-color: #202124;
+    transition: 0.3s;
+    transform: translateY(-100%);
+    justify-content: flex-end;
 }
 
-.navbar .menu .list .user {
-    font-size: 2rem;
+
+.main_menu_show {
+    transform: translateY(0);
 }
 
-.navbar #toggler,
-label {
-    display: none;
+.main_menu_item {
+    padding: 1rem;
+}
+
+.main_menu_link {
+    text-decoration: none;
     color: #ffffff;
-    font-size: 1.2rem;
 }
 
-@media (max-width: 655px) {
+.toggle_menu {
+    width: 40px;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    cursor: pointer;
+    filter: invert(1);
+    z-index: 1;
+}
 
-    .navbar .menu {
-        width: 100%;
-        max-height: 0;
-        overflow: hidden;
+.toggle_menu_icon {
+    font-size: 1.6rem;
+}
+
+.logo{
+    color: #ffffff;
+    position: absolute;
+    z-index: 1;
+    top: 15px;
+    left: 10px;
+}
+
+
+@media screen and (min-width: 768px) {
+    .main_nav{
+
+    }
+    .main_menu {
+        flex-direction: row;
+        transform: translateY(0);
     }
 
-    .navbar .menu .list {
-        flex-direction: column;
-        align-items: center;
-        padding: 20px;
-    }
-
-    .navbar .label {
-        display: inline-flex;
-        align-items: center;
-        cursor: pointer;
-    }
-
-    .navbar #toggler:checked~.menu {
-        max-height: 100%;
+    .toggle_menu {
+        display: none;
     }
 }
